# orbweaver

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GOAL.md  IMPLEMENTATION_PROGRESS.md  README.md  build.rs  codebase_analysis_report.md  environment.yml  md5sum.txt  out.json  output.json  potential_improvements.txt  rust-toolchain.toml
20250522_012440/: grammar_stats.txt  grammar_stats.txt.rule_details.txt
docs/: architecture.md  cli_usage.md  memory_optimization.md  output_formats.md
orbweaver-kernels/: Cargo.toml  build.rs
orbweaver-kernels/src/: lib.rs
orbweaver-utils/: Cargo.toml
orbweaver-utils/src/: main.rs
output/: grammar.dot  grammar.gfa  grammar.json  grammar.txt  test_output.json
scripts/: benchmark.sh  build.sh  generate_test_sequence.sh  memory_test.sh  prepare_benchmark_data.sh  quick_test.sh  run.sh  run_orbweaver_hpc.slurm  test_all.sh  test_memory_efficiency.sh
src/: analysis.rs  args.rs  cli.rs  config.rs  database.rs  encoding.rs  genome.rs  graph.rs  lib.rs  main.rs  motifs.rs  ncbi.rs  run_management.rs  slp.rs  utils.rs
src/analysis/: assembly_index.rs  mod.rs  motifs.rs  stats.rs
src/encode/: bitvec.rs  dna_2bit.rs  kmer.rs  mod.rs  simd.rs
src/fasta/: encoder.rs  mod.rs  reader.rs
src/gpu/: digram.rs  digram_kernel.cl  lcg.rs  lcg_kernel.cl  mod.rs  suffix_array.rs  utils.rs
src/grammar/: alphabet.rs  builder.rs  digram.rs  digram_table.rs  engine.rs  kmer_table.rs  lcg.rs  mod.rs  rule.rs  slp.rs  symbol.rs
src/io/: encoding.rs  mod.rs  ncbi.rs  output_dot.rs  output_fasta.rs  output_gfa.rs  output_json.rs  output_motifs.rs  output_text.rs
src/parallel/: chunking.rs  engine.rs  mod.rs
src/utils/: export.rs  hash.rs  io.rs  mod.rs  profiling.rs  progress.rs  stats.rs  visualization.rs
tests/: gpu_digram_tests.rs  integration_tests.rs  large_sequence_tests.rs  memory_opt_integration.rs  memory_opt_tests.rs  mod.rs
