[package]
name = "orbweaver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Define the library implicitly by having src/lib.rs
# [lib]
# name = "orbweaver_lib" # Optional: specify library name
# path = "src/lib.rs"

# Explicitly define the binary
[[bin]]
name = "orbweaver"
path = "src/main.rs"

[workspace]
members = ["orbweaver-kernels", "orbweaver-utils"]

[dependencies]
# Core biotechnology libraries
bio = "1.0.0"      # Rust bioinformatics library - Pinning to 1.0.0
# binseq = "0.6.2"    # For sequence encoding (VBQ) - Replaced by vbinseq
vbinseq = "0.1.7"   # Used for VBQ reader/writer initially, but problematic. Keeping for now if needed elsewhere.
bitnuc = "0.2.11"    # Core 2-bit nucleotide encoding (dependency of vbinseq, can use directly)
byteorder = "1.5"    # For handling byte order in custom binary format (Added)

# Data structures and algorithms
petgraph = "0.8.1" # Graph data structures
# fm-index = "0.3.0" # FM-Index for efficient substring queries - Requires nightly via vers-vecs
suffix = "1.3.0" # NOTE: Version was 1.3.0 in doc build
suffix_array = "0.5.0" # Explicitly add dependency seen in build log
glob = "0.3.1" # Add glob needed by ncbi.rs

# Parallelization
rayon = "1.7.0"    # Data parallelism library
dashmap = "5.5.0"  # Thread-safe concurrent HashMap
num_cpus = "1.16.0" # For getting the number of available CPU cores
ordered-float = "3.7.0" # For ordering floating point values

# GPU Acceleration
# OpenCL dependency will be added here
lazy_static = "1.4.0"
orbweaver-kernels = { path = "orbweaver-kernels" }

# Database integration
neo4rs = "0.8.0"   # Neo4j Rust driver

# Utility libraries
anyhow = "1.0"
clap = { version = "4.3", features = ["derive", "cargo"] }
chrono = { version = "0.4", features = ["serde"] } # For timestamps
csv = "1.3"
dotenv = "0.15"
quick-xml = { version = "0.35", features = ["serialize"] }
reqwest = { version = "~0.11.20", default-features = false, features = ["json", "blocking", "rustls-tls"] } # Switched to rustls-tls
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4.0", features = ["v4"] } # For generating unique identifiers
bincode = "1.3" # For binary serialization of checkpoints

# Async runtime
tokio = { version = "1.29.1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.10.0"

rustls-pki-types = "0.1"

# Orbweaver specific dependencies
sysinfo = "0.29.10"
crossbeam-channel = "0.5"
memmap2 = "0.7.1" # Add memmap2
twox-hash = "1.6.3"
union-find = "0.4.2"

# Profiling dependencies
pprof = { version = "0.12.1", features = ["flamegraph", "protobuf-codec"], optional = true }
tikv-jemallocator = { version = "0.5.4", optional = true } # Added jemalloc for profiling

# Add litemap as a direct dependency to force its version
litemap = "=0.7.0" # Forcing version for MSRV compatibility

# proc-macro2 = "1.0.95" // Pinning proc-macro2 to an EXACT version
ocl = "0.19.5" # Adding ocl for OpenCL support

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.6.0"

[build-dependencies]
# Content removed as it was CUDA-specific

[features]
profiling = ["dep:pprof", "dep:tikv-jemallocator"] # Added jemalloc to profiling feature
# Add other features as needed (e.g., "opencl" if you use a different crate)

[profile.release]
debug = true
