[package]
name = "orbweaver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Define the library implicitly by having src/lib.rs
# [lib]
# name = "orbweaver_lib" # Optional: specify library name
# path = "src/lib.rs"

# Explicitly define the binary
[[bin]]
name = "orbweaver"
path = "src/main.rs"

[[bin]]
name = "orbweaver-bench"
path = "src/bin/orbweaver_bench.rs"

[workspace]
members = ["orbweaver-kernels", "orbweaver-utils"]

[dependencies]
# Core biotechnology libraries
bio = "1.0.0"
byteorder = "1.5"

# Data structures and algorithms
suffix = "1.3.0"
suffix_array = "0.5.0"

# Parallelization
rayon = "1.7.0"    # Data parallelism library
dashmap = "5.5.0"  # Thread-safe concurrent HashMap
num_cpus = "1.16.0" # For getting the number of available CPU cores
rustc-hash = "1.1.0"    # Faster non-cryptographic hashing

# GPU Acceleration
lazy_static = "1.4.0"
orbweaver-kernels = { path = "orbweaver-kernels" }

# Utility libraries
anyhow = "1.0"
clap = { version = "4.3", features = ["derive", "cargo"] }
chrono = { version = "0.4", features = ["serde"] } # For timestamps
quick-xml = { version = "0.35", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4.0", features = ["v4"] } # For generating unique identifiers
bincode = "1.3" # For binary serialization of checkpoints

# Async runtime
tokio = { version = "1.29.1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.10.0"

rustls-pki-types = "0.1"

# Orbweaver specific dependencies
sysinfo = "0.29.10"
crossbeam-channel = "0.5"
memmap2 = "0.7.1" # Add memmap2
twox-hash = "1.6.3"
union-find = "0.4.2"
bumpalo = { version = "3.14", features = ["collections"] } # Arena allocator for reduced allocation overhead

# Profiling dependencies
pprof = { version = "0.12.1", features = ["flamegraph", "protobuf-codec"], optional = true }
tikv-jemallocator = { version = "0.5.4", optional = true } # Added jemalloc for profiling
fxhash = "0.2.1" # Faster hasher for HashMaps/DashMaps
ocl = "0.19.5" # Adding ocl for OpenCL support

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.6.0"

[build-dependencies]
# Content removed as it was CUDA-specific

[features]
profiling = ["dep:pprof", "dep:tikv-jemallocator"] # Added jemalloc to profiling feature
# Add other features as needed (e.g., "opencl" if you use a different crate)

[profile.release]
debug = true
